# speechline

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  PROJECT_CHARTER.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  tox.ini  transcribe_word_segment.py
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
INSTALLATION/: index.html
PROJECT_CHARTER/: index.html
assets/: components.drawio  diagram.drawio
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  PROJECT_CHARTER.md  index.md
examples/: bb_config.json  bb_config_word.json  config.json  cv_config.json  en_althaf.json  oov.json  run.sh  run_bookbot.sh  run_bookbot_from_manifest.sh  run_create_hf_dataset.sh  run_download_bookbot_audio.sh  run_download_conversation_audio.sh  run_en_althaf.sh  run_filter.sh  run_gcp.sh  run_hf_cv.sh  run_hf_cv_giga.sh  run_mms_filter_dataset.sh  run_phoneme_transcribe_and_filter.sh  run_sagemaker.sh  run_speech_manifest.sh  sw_config.json
notebooks/: forced_align_punctuations.ipynb  forced_align_punctuations.md  transcribe.md
scripts/: aac_to_wav.py  create_data_explorer_manifest.py  create_hf_dataset.py  data_logger.py  download_bookbot_audio.py  download_conversation_audio.py  download_s3_bucket.py  filter_dataset.py  mms_alignment.py  phoneme_transcribe_and_filter.py  timestamp_alignment.py  upload_s3_bucket.py  utils.py
search/: search_index.json
speechline/: __init__.py  classifiers.py  config.py  modules.py  phoneme_transcribe_and_filter.py  pipelines.py  run.ipynb  run.py  (+2 more)
(+245 files in other folders)
