[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechline"
version = "0.0.1"
description = "An end-to-end, offline, batch audio categorization, transcription, and segmentation."
readme = "README.md"
authors = [{ name="w11wo", email="wilson@bookbotkids.com" }, { name="anantoj", email="gg.ananto@gmail.com" },]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
keywords = ["speech", "audio", "labeling", "pipeline"]

[project.urls]
"Homepage" = "https://github.com/bookbot-kids/speechline"
"Bug Tracker" = "https://github.com/bookbot-kids/speechline/issues"
"Documentation" = "https://bookbot-kids.github.io/speechline/"